--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "bot-account": {
-    "username": "YassineHz_Sub",
+    "username": "Railway",
     "password": "",
     "type": "mojang"
   },
@@ -26,12 +26,12 @@
 
     "anti-afk": {
       "enabled": true,
-      "sneak": false
+      "sneak": true
     },
 
     "chat-messages": {
-      "enabled": true,
-      "repeat": true,
+      "enabled": false,
+      "repeat": false,
       "repeat-delay": 60,
 
       "messages": [
